Add XDG User Directories to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,14 @@
 /Desktop
 /tmp
 /repo
+
+# XDG User Directories
+/Desktop
+/Documents
+/Downloads
+/Music
+/Pictures
+/Public
+/Templates
+/Videos
+
