--- a/.ssh/config
+++ b/.ssh/config
@@ -1,13 +1,1 @@
-Host *
-TCPKeepAlive yes
-ServerAliveInterval 120
-ControlPath ~/.ssh/mux/%r@%n:%p
-ControlMaster auto
-ControlPersist 72h
-
-Host github
-User git
-Port 22
-Hostname github.com
-IdentityFile ~/.ssh/id
-IdentitiesOnly yes
+Include ~/.ssh/conf.d/*
