Do not share SSH connections on MSYS2

--- a/.ssh/conf.d/star.conf
+++ b/.ssh/conf.d/star.conf
@@ -1,7 +1,7 @@
-Host *
-TCPKeepAlive yes
-ServerAliveInterval 120
-ControlPath ~/.ssh/mux/%r@%n:%p
-ControlMaster auto
-ControlPersist 72h
-
+Match Host * !Exec "[[ $(uname) == MSYS_* ]]"
+  TCPKeepAlive yes
+  ServerAliveInterval 120
+  ControlPath ~/.ssh/mux/%r@%n:%p
+  ControlMaster auto
+  ControlPersist 72h
+  
